Make !BorderContainer splitters wider on iOS and android, so that they can be easily grabbed.   Didn't adjust the !BorderContainer padding or gutter size to match; maybe I should, to be consistent, but the other issue with mobile is limited screen space.   Fixes #16831.
Also adding .dj_ios and .dj_android CSS flags to uacss.js.

git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@30839 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/claro/layout/BorderContainer.css
+++ b/themes/claro/layout/BorderContainer.css
@@ -66,11 +66,19 @@ Splitters and gutters:
   border: 0;
   height: 5px;
 }
+.dj_ios .claro .dijitSplitterH,
+.dj_android .claro .dijitSplitterH {
+  height: 11px;
+}
 .claro .dijitSplitterH .dijitSplitterThumb {
   background: #b5bcc7 none;
   height: 1px;
   top: 2px;
   width: 19px;
+}
+.dj_ios .claro .dijitSplitterH .dijitSplitterThumb,
+.dj_android .claro .dijitSplitterH .dijitSplitterThumb {
+  top: 5px;
 }
 .claro .dijitSplitterV,
 .claro .dijitGutterV {
@@ -79,12 +87,20 @@ Splitters and gutters:
   width: 5px;
   margin: 0;
 }
+.dj_ios .claro .dijitSplitterV,
+.dj_android .claro .dijitSplitterV {
+  width: 11px;
+}
 .claro .dijitSplitterV .dijitSplitterThumb {
   background: #b5bcc7 none;
   height: 19px;
   left: 2px;
   width: 1px;
   margin: 0;
+}
+.dj_ios .claro .dijitSplitterV .dijitSplitterThumb,
+.dj_android .claro .dijitSplitterV .dijitSplitterThumb {
+  left: 5px;
 }
 /* hovered splitter */
 .claro .dijitSplitterHHover,
